# CodeNexus

./: .cxx_wrapper.sh  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  README_EN.md  README_ZH.md  audit.toml  build.rs  clippy.toml  codenexus.lbug  deny.toml  rustfmt.toml
.cargo/: config.toml
.github/: codeql.yml  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
.trae/specs/implement-codenexus/: checklist.md  spec.md  tasks.md
.uploads/: 47c591ca-2ecf-49ef-bd4b-05a22a5cf421_design.md  4cc0f795-e5d1-422c-bc7f-ed16b862a5d9_tasks.md  7f187342-5fb0-4569-b787-ef543af29649_spec.md  e2fc920c-f4cb-4f3b-9ae2-b8b6b441b666_proposal.md
benches/: README.md  daemon_bench.rs  graph_bench.rs  incremental_bench.rs  index_bench.rs  memory_bench.rs  query_bench.rs  trace_bench.rs
benches/common/: mod.rs
build-support/: libzstd.pc
docs/: ADD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DDD.md  PRD.md  SECURITY.md  TRD.md  database-compression.md
docs/security/: strix-codenexus_679c-redos-proof.rs  strix-codenexus_679c-triage.md
examples/: Cargo.toml  README.md  check_nodes.rs
examples/src/: lib.rs
scripts/: archive_change.sh  merge_delta_spec.py
skill/: SKILL.md
skill/references/: appendix.md  commands.md  storage-model.md  workflows.md
src/: lib.rs  main.rs  test_log_capture.rs
src/analysis/: api_review.rs  architecture.rs  community.rs  complexity.rs  cross_service.rs  dead_code.rs  mod.rs
src/analysis/dead_code/: mod.rs  tests.rs
src/cache/: capability.rs  mod.rs  module.rs
src/cli/: api_impact_cmd.rs  architecture_cmd.rs  args.rs  clean_cmd.rs  community_cmd.rs  complexity_cmd.rs  context_cmd.rs  cross_service_cmd.rs  daemon_cmd.rs  dead_code_cmd.rs  detect_changes_cmd.rs  disambiguation.rs  error.rs  export_cmd.rs  hook_cmd.rs  impact_cmd.rs  import_cmd.rs  index_cmd.rs  list_cmd.rs  lsp_cmd.rs  mcp_cmd.rs  mod.rs  query_cmd.rs  rename_cmd.rs  route_map_cmd.rs  search_cmd.rs  setup_cmd.rs  shape_check_cmd.rs  status_cmd.rs  tool_map_cmd.rs  trace_cmd.rs
src/daemon/: capability.rs  daemon.rs  error.rs  event.rs  index_observer.rs  mod.rs  module.rs
src/discover/: error.rs  mod.rs  walker.rs
src/embed/: client.rs  config.rs  error.rs  mod.rs  module.rs  search.rs  storage.rs
src/index/: budget.rs  capability.rs  error.rs  hash.rs  incremental.rs  mod.rs  module.rs  phases.rs  pipeline.rs  pipeline_dag.rs
src/ir/: extract_result.rs  mod.rs  types.rs
src/kit/: bootstrap.rs  mod.rs  shim.rs
src/lsp/: clangd.rs  client.rs  extract.rs  fortls.rs  gopls.rs  jdtls.rs  mod.rs  pyright.rs  references_cache.rs  session.rs  types.rs  typescript_ls.rs
src/mcp/: mod.rs
src/model/: edge.rs  edge_type.rs  flow_type.rs  graph.rs  i18n.rs  language.rs  mod.rs  node.rs  node_label.rs
src/parse/: bash.rs  c.rs  capability.rs  cpp.rs  csharp.rs  css.rs  dispatcher.rs  error.rs  extractor.rs  fortran.rs  go.rs  haskell.rs  helpers.rs  html.rs  java.rs  javascript.rs  json.rs  mod.rs  module.rs  ocaml.rs  parallel.rs  parser_factory.rs  parser_pool.rs  php.rs  python.rs  regex.rs  ruby.rs  rust_extractor.rs  scala.rs  typescript.rs  verilog.rs
src/query/: bm25f.rs  capability.rs  cypher.rs  cypher_subset.pest  cypher_subset.rs  error.rs  facade.rs  fulltext.rs  mod.rs  module.rs  structured.rs  tokenizer.rs
src/resolve/: calls.rs  capability.rs  cross_lang.rs  dataflow.rs  error.rs  fqn.rs  imports.rs  includes_graph.rs  mod.rs  module.rs  mro.rs  orchestrator.rs  scope.rs  symbol_table.rs  type_resolver.rs
src/service/: api_impact.rs  architecture.rs  clean.rs  community.rs  complexity.rs  context.rs  cross_service.rs  daemon.rs  dead_code.rs  detect_changes.rs  error.rs  export.rs  hook.rs  impact.rs  import.rs  index.rs  list.rs  lsp.rs  mod.rs  project.rs  query.rs  rename.rs  route_map.rs  runtime.rs  search.rs  setup.rs  shape_check.rs  status.rs  tool_map.rs  trace.rs
src/storage/: capability.rs  connection.rs  error.rs  loader.rs  mod.rs  module.rs  quality.rs  repository.rs  schema.rs
src/trace/: bfs.rs  call_graph.rs  capability.rs  context.rs  data_flow.rs  error.rs  facade.rs  graph_loader.rs  impact.rs  mod.rs  module.rs  taint.rs  types.rs
tests/: cli_index_and_daemon.rs  cli_integration.rs  end_to_end.rs  kit_bootstrap.rs  mcp_integration.rs  non_ascii_path_test.rs
tests/acceptance/: run_acceptance.sh
tools/verification/: README.md  fetch_samples.sh  samples.json  type_map.json
tools/verification/queries/: callees_of_function.cql  callers_of_function.cql  class_methods.cql  extends_chain.cql  file_contains_symbols.cql  function_count_by_file.cql  implements_list.cql  imports_of_file.cql
tools/verification/src/: codenexus_stats.rs  gitnexus_client.rs  main.rs  query_compare.rs  report.rs  type_map.rs
