[package]
name = "codenexus"
version = "0.3.2"
edition = "2021"
rust-version = "1.85"
description = "A queryable code knowledge graph tool built on LadybugDB and tree-sitter"
authors = ["Kirky.X"]
license = "MIT"
repository = "https://github.com/Kirky-X/codenexus"
readme = "README.md"
keywords = ["code-analysis", "knowledge-graph", "tree-sitter", "ladybugdb", "code-indexing"]
categories = ["command-line-utilities", "development-tools", "parsing"]
homepage = "https://github.com/Kirky-X/codenexus"
documentation = "https://github.com/Kirky-X/codenexus#readme"

[lib]
name = "codenexus"
path = "src/lib.rs"

[[bin]]
name = "codenexus"
path = "src/main.rs"

[[bin]]
name = "codenexus-verify"
path = "tools/verification/src/main.rs"

[features]
default = ["full"]
minimal = ["lang-rust"]
core = ["lang-c", "lang-rust", "lang-python"]
full = ["core", "lang-fortran", "lang-typescript", "lang-go", "lang-java", "lang-cpp", "daemon", "analysis", "complexity", "api-review", "community", "cross-service", "lsp", "cli", "mcp", "cache"]
lang-c = ["dep:tree-sitter-c"]
lang-rust = ["dep:tree-sitter-rust"]
lang-fortran = ["dep:tree-sitter-fortran"]
lang-python = ["dep:tree-sitter-python"]
lang-typescript = ["dep:tree-sitter-typescript"]
lang-go = ["dep:tree-sitter-go"]
lang-java = ["dep:tree-sitter-java"]
lang-cpp = ["dep:tree-sitter-cpp"]
embed = ["dep:reqwest", "dep:ort", "dep:tokenizers", "dep:ndarray"]
daemon = ["dep:notify", "dep:notify-debouncer-full"]
analysis = []
api-review = ["analysis"]
community = ["analysis", "dep:petgraph"]
cross-service = ["analysis"]
complexity = ["analysis"]
lsp = ["dep:lsp-types", "dep:lsp-server", "dep:crossbeam-channel"]
mcp = ["dep:sdforge", "dep:rmcp", "dep:tokio", "sdforge/mcp"]
cli = ["dep:sdforge", "dep:tokio", "sdforge/cli"]
cache = ["dep:oxcache"]

[dependencies]
trait-kit = { version = "0.2", default-features = false, features = ["async"] }
lbug = "0.17"
tree-sitter = "0.26"
tree-sitter-c = { version = "0.24", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-fortran = { version = "0.6", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.23", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
rayon = "1"
ignore = "0.4"
notify = { version = "6", optional = true }
notify-debouncer-full = { version = "0.7", optional = true }
clap = { version = "4", default-features = false, features = ["std", "help", "usage", "error-context", "suggestions"] }
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"], optional = true }
ort = { version = "2.0.0-rc.12", optional = true }
tokenizers = { version = "0.23", default-features = false, features = ["fancy-regex"], optional = true }
ndarray = { version = "0.17", optional = true }
thiserror = "2"
anyhow = "1"
pest = "2.7"
pest_derive = "2.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
tempfile = "3"
lz4_flex = "0.11"
uuid = { version = "1", features = ["v7"] }
petgraph = { version = "0.6", default-features = false, optional = true }
lsp-types = { version = "0.95", optional = true }
lsp-server = { version = "0.7", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
sdforge = { version = "0.3", default-features = false, optional = true }
rmcp = { version = "2.1", features = ["transport-io"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util"], optional = true }
oxcache = { version = "0.3", default-features = false, features = ["minimal"], optional = true }
regex = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
time = { version = "0.3", features = ["macros"] }
rust_decimal = "1.37"
sysinfo = "0.30"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
pkg-config = "0.3"

[[bench]]
name = "index_bench"
harness = false

[[bench]]
name = "query_bench"
harness = false

[[bench]]
name = "trace_bench"
harness = false

[[bench]]
name = "incremental_bench"
harness = false

[[bench]]
name = "memory_bench"
harness = false

[[bench]]
name = "daemon_bench"
harness = false
required-features = ["daemon"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false

[profile.release.package."*"]
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.test]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"

[lints.rust]
unexpected_cfgs = "allow"

# Local development: uncomment to use path deps for trait-kit/sdforge.
# MUST be commented out before publishing to crates.io.
# [patch.crates-io]
# trait-kit = { path = "../trait-kit" }
# sdforge = { path = "../sdforge" }
